src/test/ui/const-generics/const-expression-parameter.min.stderr
error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/const-expression-parameter.rs:15:20
   |
LL |     i32_identity::<1 + 2>();
   |                    ^^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     i32_identity::<{ 1 + 2 }>();
   |                    ^       ^

error: aborting due to previous error

